--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,10 @@ node_modules/
 .env.test.local
 .env.production.local
 
-# Debug logs
+# Logs
+/logs
+*.log
+logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
