Refactor server management and configuration handling. Migrate server configuration to src/config/servers.js, implement socket.io for server connections, and enhance error handling and reconnection logic. Remove deprecated trackkills command and log parser utilities.

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,6 @@ ENV/
 .venv/
 
 # Configuration
-config/servers.json
-config/*.local.json
-!config/servers.example.json 
+src/config/servers.json
+src/config/*.local.json
+!src/config/servers.example.js
