--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mariadb": "^3.4.2",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
+    "socket.io-client": "^4.8.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
