--- a/.env.example
+++ b/.env.example
@@ -10,18 +10,8 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_USER=your_db_user
 DB_PASSWORD=your_db_password
-DB_NAME=squad_stats
-
-# Bot Configuration
-# The prefix for legacy commands (if we implement them)
-COMMAND_PREFIX=!
+DB_NAME=your_db_name
 
 # Environment
 # Set to 'production' for production environment
 NODE_ENV=development
-
-# Optional: Squad Server Configuration
-# These will be needed when we implement Squad server connection
-SQUAD_SERVER_HOST=your_squad_server_ip
-SQUAD_SERVER_PORT=your_squad_server_port
-SQUAD_RCON_PASSWORD=your_rcon_password
