--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
     "socket.io-client": "^4.8.1",
+    "umzug": "^3.8.2",
     "winston": "^3.11.0"
   },
   "devDependencies": {
