--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "migrate": "sequelize-cli db:migrate",
     "migrate:undo": "sequelize-cli db:migrate:undo",
     "migrate:undo:all": "sequelize-cli db:migrate:undo:all",
-    "migrate:create": "sequelize-cli migration:create"
+    "migrate:create": "sequelize-cli migration:create",
+    "db:migrate": "node -e \"require('./src/database/init').runMigrations().then(() => process.exit(0)).catch(err => { console.error(err); process.exit(1); })\""
   },
   "keywords": [
     "discord",
