--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
     "mariadb": "^3.4.2",
+    "node-cron": "^4.1.0",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
     "socket.io-client": "^4.8.1",
