--- a/.env.example
+++ b/.env.example
@@ -12,10 +12,14 @@ DB_USER=your_db_user
 DB_PASSWORD=your_db_password
 DB_NAME=your_db_name
 
-# Leaderboard Configuration
-# Channel ID where the leaderboard message will be posted (right-click channel -> Copy ID)
+# Channel Configuration
+# Channel IDs where specific commands will be posted (right-click channel -> Copy ID)
 # Example: LEADERBOARD_CHANNEL_ID=123456789012345678
 LEADERBOARD_CHANNEL_ID=
+
+# Channel ID where the /stats command can be used
+# Example: STATS_CHANNEL_ID=123456789012345678
+STATS_CHANNEL_ID=
 
 # Optional: Update interval in minutes (default: 60)
 # Example: LEADERBOARD_INTERVAL_MINUTES=30
