Add HTTP_PORT configuration to .env.example and initialize API server in index.js

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,10 @@ STATS_CHANNEL_ID=
 # Example: LEADERBOARD_INTERVAL_MINUTES=30
 # LEADERBOARD_INTERVAL_MINUTES=
 
+# API Server
+# Port for the stats HTTP API (default: 3000)
+HTTP_PORT=3000
+
 # Environment
 # Set to 'production' for production environment
 NODE_ENV=development
